Added damdp to namespace.

--- a/amdp/NAMESPACE
+++ b/amdp/NAMESPACE
@@ -1,6 +1,8 @@
 exportPattern("amdp")
+exportPattern("damdp")
+
 #some methods
 S3method(plot, amdp)
-
 S3method(print, amdp)
 S3method(summary, amdp)
+S3method(plot, damdp)
