--- a/amdp/DESCRIPTION
+++ b/amdp/DESCRIPTION
@@ -6,6 +6,6 @@ Date: 2013-07-10
 Author: Somebody
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: It is cool. You shoudl use it.
-License: whatevs
+License: GPL2
 Depends: sfsmisc
 Suggests: mlbench, gbm, randomForest, nnet
