added initial versions of the man files. -alg.

--- a/ICEbox/NAMESPACE
+++ b/ICEbox/NAMESPACE
@@ -5,5 +5,9 @@ exportPattern("dice")
 S3method(plot, ice)
 S3method(print, ice)
 S3method(summary, ice)
-S3method(plot, ice)
+
+S3method(plot, dice)
+S3method(print, dice)
+S3method(summary, dice)
+
 
