--- a/ICEbox/DESCRIPTION
+++ b/ICEbox/DESCRIPTION
@@ -3,9 +3,12 @@ Type: Package
 Title: Tool for visualizing the fit of an arbitrary supervised learning algorithm
 Version: 0.1
 Date: 2013-07-10
-Author: Somebody
-Maintainer: <yourfault@somewhere.net>
-Description: It is cool. You shoudl use it.
+Author: Alex Goldstein, Adam Kapelner, Justin Bleich
+Maintainer: <adam@somewhere.net>
+Description: This package implements ideas found in.
 License: GPL2
 Depends: sfsmisc
-Suggests: mlbench, gbm, randomForest, nnet
+Suggests: mlbench, gbm, randomForest, nnet, gam, MASS
+
+
+
