--- a/ICEbox/DESCRIPTION
+++ b/ICEbox/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1
 Date: 2013-10-01
 Author: Alex Goldstein, Adam Kapelner, Justin Bleich
 Maintainer: <kapelner@wharton.upenn.edu>
-Description: This package implements ideas that extend the PDP by considering the functional relationship between the predicted response and a given feature for individual observations.
+Description: This package implements Individual Conditional Expectation (ICE) plots, a tool for visualizing the model estimated by any supervised learning algorithm. ICE plots refine Friedman's partial dependence plot by graphing the functional relationship between the predicted response and a covariate of interest for individual observations. Specifically, ICE plots highlight the variation in the fitted values across the range of a covariate of interest, suggesting where and to what extent they may exist.
 License:  GPL-2 | GPL-3
 Depends: sfsmisc
 Suggests: mlbench, gbm, randomForest, nnet, gam, MASS
-
